vlib/v/checker/tests/assign_immutable_reference_var_err.vv
[heap]
struct Foo {
mut:
	value int
}

fn y(x &Foo) {
	mut m := x
	m.value = 42
}

fn main() {
	x := Foo{123}
	y(x)
	println(x)
}
